# AndroScan

./: .gitignore  AGENT_PROTOCOL.md  README.md  androscan.py  global_config.yaml  pyproject.toml
androscan/: __init__.py  cli_spinner.py  cli_term.py  constants.py
androscan/config/: __init__.py  loader.py
androscan/extraction/: __init__.py  extract.py  manifest_parser.py
androscan/internal/: __init__.py  app_meta.py  dossier.py  evidence_ref.py  exploit_verification.py  observations_store.py  resolve_app_id.py  run_folder.py  run_log.py  skill_results_cache.py  skills.py  vuln_module_skills_signals.json  vuln_signals_config.py  workflow.py
androscan/llm/: __init__.py  client.py  parser.py  prompts.py
androscan/modules/: __init__.py
androscan/skills/: __init__.py  app_env_check.py  base.py  build_exploit_command.py  capture_signals.py  extract_manifest.py  generate_report.py  get_decompiled_class.py  get_decompiled_method.py  list_classes_in_package.py  prepare_dossier.py  run_exploit_command.py  verify_exploit_result.py
docs/: AI_ENGINEERING_CONSTITUTION.md  ARCHITECTURE.md  CONVENTIONS.md  DECISIONS.md  DESIGN_DOC.md  FEATURE_WORKFLOW.md  KNOWN_ISSUES.md  PROJECT_BRIEF.md  REVIEW_CHECKLIST.md  SAFETY_AND_SECURITY.md  STATE.md  TASKS.md  TEST_STRATEGY.md
tests/: __init__.py  test_app_meta.py  test_cli.py  test_config.py  test_evidence_ref.py  test_exploit_verification.py  test_extraction.py  test_import.py  test_llm.py  test_observations_store.py  test_skill_results_cache.py  test_skills.py  test_workflow.py
tests/fixtures/: AndroidManifest.xml
(+2 files in other folders)
