[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "androscan"
version = "0.1.0"
description = "LLM-native Android pentesting tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["androscan*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
